v25.10/en/_sources/interfaces.rst.txt
Interfaces

The following interfaces are provided for configuring and obtaining
data from the

rc_visard NG

:

Web GUI\:(Section \ref{webgui:sect-web-gui})  Easy-to-use graphical
interface to configure the rc_visard NG, do calibrations, view live
images, do service calls, visualize results, etc.

GigE Vision 2.0/GenICam\:(Section \ref{gigevision:sect-genicam})
Images and camera related configuration.

REST API\:(Section \ref{rest_api:sect-rest-api})  API to configure the
rc_visard NG, query status information, do service calls, etc.

Ethernet KRL Interface (EKI)\:(Section \ref{eki:sect-eki})  API to
configure the rc_visard NG and do service calls from KUKA KSS robots.

gRPC image stream\:(Section \ref{grpc:sect-grpc})  Stream synchronized
image sets via gRPC.

Time synchronization\:(Section \ref{time_sync:sect-time-sync})  Time
synchronization between the rc_visard NG and the application host.

